# cp-paw

./: .gitignore  .gitignore_global  LICENSE  Makefile  Makefile.debug  Makefile.fast  Makefile.in  Makefile.none  Makefile.parallel  Makefile_bare  Makefile_bare.in  Makefile_targets.in  README  README.md  README~  config.status  configure  configure.ac  configure.in  lowercasemodnames.f90  lowercasemodnames.sh  lowercasemodnames.x  out  parms.absoft_64  parms.absoft_osx  parms.alpha  parms.alpha_64  parms.example  parms.g95  parms.ibm  parms.ifc_mkl  parms.ifc_osx  parms.ifort_mkl  parms.intel  parms.linuxalpha  parms.lnx_gfortran_mkl  parms.lnx_ifc12_fftw  parms.osx_absoft  parms.osx_g95  parms.osx_gfortran  (+17 more)
Atom/: atom.doit  atom.doone  atom_compile  atom_compile_abs  build.f  dosome  paw_diffgl.f  paw_setups
DX/: dx_wave.cfg
F90PP/: #cppman#  BUFFER_MODULE.mod  a.out  (+24 more)
src/: #paw.f#  #paw_iotra.f#  .#dummy.f  .#paw_waves.f.save  .dir1  Makefile.in  configure.in  dummy.f  paw.f  paw.f90  paw.f~  paw_accel_cublas.f90  paw_accel_cufft.f90  paw_accel_cusolver.f90  paw_assist.f90  paw_atomlib.f90  paw_atoms.f  paw_atoms.f90  paw_augmentation.f  paw_augmentation.f90  paw_augmentation.f90~  paw_augmentation.f~  paw_banddata.f90  paw_brillouin.f90  paw_cell.f  paw_cell.f90  paw_cg.f90  paw_ci.f90  paw_classical.f  paw_classical.f90  paw_clemens.f~  paw_clock.f  paw_clock.f90  paw_constants.f  paw_constants.f90  paw_constraints.f  paw_constraints.f90  paw_continuum.f  paw_continuum.f90  paw_continuum_hms_s.f90  (+127 more)
src/Buildtools/: Makefile.in  defaultparmfile  dollar_ok.sh  f90pp.in  f90pp.sed  f90pp_tmplts.f90  install_readme  make_release_package.sh  makedocs.in  makeinstall.in  moddep.sh  parmfilewriter.f90  paw_build.sh  paw_buildfix.sh  paw_dollar_ok.sh  paw_fcflags.sh  paw_mkbuilddir.sh  paw_moddep.sh  paw_srclist.sh  paw_versioninfo.sh
src/Buildtools/Codesign/: paw-entitlement.xml  paw_codesign  paw_codesign.sh
src/Buildtools/Doxygen/: Doxyfile
src/Buildtools/F90PP/: circulardependencies.f90  dollar_ok.sh  dopaw  f90pp.in  f90pp.sed  f90pp_tmplts.f90  finddep  finddependencies.f90  lowercasemodnames.sh  readme
src/Buildtools/F90PP_new/: f90pp_tmplts.f90  readme
src/Buildtools/Make_distribution_package/: make_distribution_package.sh  make_release_package.sh
src/Buildtools/Srcblob/: getsrc_elf.sh  getsrc_macho.sh  paw_getsrc_elf.sh
src/Buildtools/Version/: getversion.sh
src/Contributions/Alouani/Ldaplusu/: paw_ldaplusu.f_orig
src/Contributions/Alouani/Optic/: paw_optic.f
src/Contributions/Alouani/src_ucsb/: dat  out  paw.f  paw_assist.f  paw_augmentation.f  paw_cell.f  paw_graphics.f  paw_gw.f  paw_ionew.f  paw_ioroutines.f  paw_iotra.f  paw_ldaplusu.f_03_05_2002  paw_lists.f  paw_mpelib.f  paw_optic.f  paw_optic.f_old  paw_potential.f  paw_potential_old.f  paw_qmmm.f  paw_report.f  paw_strcio.f  paw_strings.f  paw_vext.f  paw_waves.f  paw_waves.f_old  paw_waves1.f  paw_waves2.f
src/Contributions/Alouani/src_ucsb/F90PP/: f90pp.in
src/Contributions/Bloechl/DMFT/: paw_dmft.f90
src/Docs/: all.bib  doc.bib  history.tex  install.tex  manual.tex
src/Docs/Examples/: si2.cntl  si2.strc
src/Docs/Figs/: big.eps  h2co-rho.eps  h2co-rho.epsf  rubgnu.eps
src/Docs/Figs/PAWdirtree/: pawdirtree.eps  pawdirtree.fig  pawdirtree.fig.bak
src/Docs/Figs/PAWlogo/: paw_logo.fig  pawlogo.eps  readme
src/Docs/Figs/PAWlogo/Safe/: paw_logo.eps  paw_logo.fig
src/F90PP/: dependencies  dopaw  f90pp.in  f90pp.in_backup  f90pp.sed  f90pp_tmplts.f90  finddep  finddependencies.f90  parmfilewriter.f90
src/Libs/: fftpack.f  lapack.f
src/Tools/: fix_movie.f90
src/Tools/Atom/: build.f90  inboudaryfromkaras.f90  paw_atom.f  paw_atom.f90  paw_atom.f90~  paw_atom.f~  paw_atom_f.save  paw_diffgl.f  paw_diffgl.f90  paw_oldradial.f90
src/Tools/Atom/Empty/: empty.f  out
src/Tools/Atom/Notes/: energies.eps  h_epw_conv_a.eps  notebook.tex
src/Tools/Atom_old/: build.f  paw_atom.f
src/Tools/Atom_old/Empty/: h.out
src/Tools/Atomnew/: paw_lattice.f90  paw_newatom.f90  paw_newatom.f90_save
src/Tools/Bands/: paw_bands.f90
src/Tools/Convertrstrt/: paw_iooldrdwrte.f90  read.f90
src/Tools/FromPOSCAR/: paw_fromposcar.f90
src/Tools/Gnuplot/: contour.gnu  rubbersheet.gnu  twod.gnu
src/Tools/Grab/: paw_grab.f90
src/Tools/Misc/Murnaghan/: doit  murnaghan.f90  murnaghan.x
src/Tools/Murnaghan/: example.in  paw_murnaghan.f90
src/Tools/New/: paw_new  x.cntl_erlx  x.cntl_rrlx  x.dcntl  x.gcntl  x.strc  x.wcntl
src/Tools/Obsolete_Scripts/: paw_resolve_old  paw_scan_old  paw_show_old
src/Tools/PDoS/: paw_dos.f  paw_dos.f.old011009  paw_dos.f90  paw_dos.f~  paw_dosplot.f90  putongrid.f~
src/Tools/Parmfilewriter/: parmfilemaker.f90
src/Tools/Polyhedra/: paw_polyhedra.f90
src/Tools/Preopt/: POPT_MODULE.mod  READ_MODULE.mod  case.pcntl  case.pprot  case.strc  doku.aux  doku.dvi  doku.ps  doku.tex  doku.toc  paw_preopt.f90  paw_preopt.f~
src/Tools/Scripts/: doppaw  doppaw.sh  mkpretty  paw_checkpoint  paw_checkpoint.sh  paw_collect  paw_collect.sh  paw_compare  paw_compare.sh  paw_copy  paw_copy.sh  paw_distribution  paw_do  paw_do.sh  paw_ext_copy  paw_get  paw_get.sh  paw_get_energy  paw_get_gap  paw_get_homo  paw_get_lumo  paw_getetot  paw_getsrc.sh  paw_gpu_capabilities.sh  paw_mpeg_encode  paw_nvblas.sh  paw_requirements.sh  paw_resolve  paw_resolve.sh  paw_run  paw_scan  paw_scan.sh  paw_scanlat  paw_scanlat.sh  paw_show  paw_show.sh  paw_snapshot  paw_stripnos  paw_versioninfo.sh  paw_waittillempty  (+2 more)
src/Tools/Show/: paw_show~
src/Tools/Stpa/: paw_stpa.f90  paw_stpreport.f90
src/Tools/Strc/: paw_strc.f  paw_strc.f90  paw_tostrc.f  paw_tostrc.f90  paw_tostrc.f~  paw_toxyz.f90  paw_toxyz.f_old  paw_toxyz.f~  paw_tozyz.f90
src/Tools/Test/: PLGNDR.agr  PLGNDR.eps  paw_test.f90  paw_testlib.f90  setup_peter_.eta_and_vae_hb_offsite_l1.nxy
src/Tools/Tra/: paw_cleantra.f90  paw_converttra.f  paw_converttra.f90  paw_tra.f  paw_tra.f90  paw_tra.f~
src/Tools/Version/: getsrc.sh  getversion.sh
src/Tools/Wave/: paw_1davpot.f90  paw_cmcwave.f90  paw_wave.f  paw_wave.f90
(+295 files in other folders)
